syntax = "proto3";

package thread;

service ThreadService {
    rpc fetchThreadById(ThreadIdArgs) returns (Thread) {}
    rpc removePinnedCommentById(CommentIdArgs) returns (ActionComplete) {}
    rpc updateThreadCommentersIds(UpdateThreadCommentersIdsArgs) returns (ActionComplete) {}
    rpc isUserSubscribedToThread(IsUserSubscribedToThread) returns (ActionComplete) {}
    rpc emailUsersSubscribedToThread(EmailUsersSubscribedToThreadArgs) returns (ActionComplete) {}
}

message EmailUsersSubscribedToThreadArgs {
    string thread_id = 1;
    string user_id = 2;

}

message IsUserSubscribedToThread {
    string thread_id = 1;
    string user_id = 2;
}

message UpdateThreadCommentersIdsArgs {
    string thread_id = 1;
    string user_id = 2;
}

message CommentIdArgs {
    string id = 1;
}

message ThreadIdArgs {
    string id = 1;
}

message Thread {
    string id = 1;
    string title = 2;
    string website_url = 3;
    string pinned_comment_id = 4;
    string application_id = 5;
    bool thread_closed = 6;
}

message ActionComplete {
    bool success = 1;
    string message = 2;
}
